
                        Doomsday Engine Change Log
                        ==========================
               Legend: + added, - fixed, * improved/changed


Version 1.7.14 (work in progress)
--------------
! Maintenance Release
- fixed: loading order of 3D models (mixed up demon/spectre skins)
- quietly allow the use of undefined sprite frames (object hidden)


Version 1.7.13
--------------
! Maintenance Release
* model offset and scale are interpolated (Model -> Offset XYZ,
  Model -> Scale XYZ)
* overridden model defs are no longer loaded at all (bug 760099)
* number of screenshots is not limited to 100
* screenshot file names are selected according to game mode
- fixed: semicolon in bindings (key name "smcln")
- fixed: music volume = zero prevents songs from changing
- fixed: halos flicker sometimes through doors
- a shadow is not rendered if it would be above the object
- fixed: crash when loading external resources of color-mapped sprites

Network:
- fixed: player gets stuck in enemies
- fixed: player gets stuck in a moving plane (elevator, door)
- fixed: crash in clmobj handling
- fixed: recording demos with multiple local players
- fixed: clientside jumping power, jumping enabled
- fixed: player start spot selection (especially TNT/Plutonia)
- fixed: mobj Z coordinates were sometimes incorrect on clientside
- fixed: server didn't increase client's bandwidth rating, ever
- fixed: WAD warning box in Client Setup screen was in the wrong place
- fixed: halos weren't always displayed correctly on clientside

drD3D:
+ option -triple: enable triple buffering in fullscreen mode

XG:
- XG should always be disabled on clientside

jDoom:
+ cvar 'map-door-colors': show colors of locked doors in automap
+ cvar 'map-door-glow': locked doors have a glow around them (1=normal)
* Plutonia/TNT will automatically set rend-sky-full
- fixed: bullet puffs in face (bug 740767)
- fixed: main menu item spacing too tight