@@ -865,6 +865,7 @@ int DED_ReadData(ded_t *ded, char *buffer, const char *sourceFile)
 						RV_STR("Frame", mdl->sub[sub].frame)
 						RV_INT("Frame range", mdl->sub[sub].framerange)
 						RV_INT("Skin", mdl->sub[sub].skin)
+						RV_STR("Skin file", mdl->sub[sub].skinfilename.path)
 						RV_INT("Skin range", mdl->sub[sub].skinrange)
 						RV_VEC("Offset XYZ", mdl->sub[sub].offset, 3)
 						RV_FLAGS("Flags", mdl->sub[sub].flags, "df_")
